# tamandua-agent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ebpf  Makefile  NOTICE  README.md  build.rs  docker-compose.yml  minimal_config.toml  mutants.toml  recommended_config.toml
.cargo/: config.toml
.github/workflows/: ci.yml
SystemExtension/: Package.swift
SystemExtension/TamanduaFileMonitor/: ESClient.swift  Info.plist  TamanduaFileMonitor.swift  XPCServer.swift  entitlements.plist
SystemExtension/Tests/: ESClientTests.swift  XPCServerTests.swift
auditd_rules/: README.md  tamandua.rules
benches/: collectors.rs  detection_benchmarks.rs  ml_streaming.rs  performance.rs
bpf/: Makefile  lsm_hooks.bpf.c  vmlinux.h
config/: agent.toml
data/: iocs.json
docs/: TCC_XPC_INTEGRATION_EXAMPLE.md  TCC_XPC_MONITORING.md  config_rollback.md
docs/benchmarks/: EBPF_READINESS_RUNBOOK.md
ebpf-common/: Cargo.toml
ebpf-common/src/: lib.rs
ebpf-programs/: Cargo.toml  README.md
ebpf-programs/.cargo/: config.toml
ebpf-programs/llm-uprobe/: Cargo.toml
ebpf-programs/llm-uprobe/.cargo/: config.toml
ebpf-programs/llm-uprobe/src/: lib.rs  main.rs
ebpf-programs/llm-uprobe/tests/: structure_test.rs
ebpf-programs/src/: main.rs
examples/: baseline_demo.rs  ml_streaming_demo.rs
install/: tamandua-agent.service
installer/linux/: Makefile  README.md  agent.toml.production  build.sh  ci-build.sh  docker-build.sh  tamandua-agent.service
installer/windows/: License.rtf  Product.wxs  README.md  Service.wxs  UI.wxs  build.cmd  build.ps1  config.wxi  validate-installation.ps1  write-config.ps1
models/: malware_features.onnx
proptest-regressions/tests/: property_tests.txt  transport_property_tests.txt
rules/network/: c2_indicators.yml
rules/packs/: ransomware.yml
rules/process/: credential_access.yml  defense_evasion.yml  execution.yml  lateral_movement.yml
rules/registry/: persistence.yml
scripts/: admin_profile_test.ps1  build-hardened.ps1  build-hardened.sh  build_ml_feature_smoke_model.py  container-entrypoint.sh  notarize.sh  run_profile_tests_admin.ps1  test_profiles.ps1  test_profiles_admin.ps1  validate_auditd_integration.sh  validate_profiles_comprehensive.ps1
src/: event_triage.rs  lib.rs  main.rs  resource_governor.rs
src/analyzers/: alerting.rs  behavioral.rs  behavioral_chains.rs  bof_detector.rs  cmdline_spoofing.rs  data_staging.rs  early_bird.rs  etw_tampering.rs  explainer.rs  heap_spray.rs  indirect_syscall.rs  integrated_detector.rs  local_ml.rs  macho_parser.rs  mitre.rs  ml_agent_parity_fixture.rs  ml_local.rs  mod.rs  offline_detection.rs  onnx_inference.rs  onnx_scanner.rs  pipeline.rs  return_address.rs  sample_submitter.rs  stack_pivot.rs  supply_chain.rs  thread_hijacking.rs  threat_intel.rs  yara.rs
src/baseline/: config.rs  detector.rs  learner.rs  mod.rs  storage.rs  sync.rs  tests.rs  types.rs
src/collectors/: ad_monitor.rs  ai_discovery.rs  ai_model_loader.rs  ai_usage.rs  amsi.rs  bof_collector.rs  browser_protection.rs  clipboard.rs  clipboard_monitor.rs  cloud.rs  clr.rs  container.rs  credential_theft.rs  defense_evasion.rs  dlp.rs  dns.rs  driver_blocklist.rs  ebpf_container_escape_tests.rs  ebpf_linux.rs  endpoint_security.rs  etw.rs  exploit_mitigation.rs  file.rs  file_journal.rs  fim.rs  firmware.rs  governor_aware_interval.rs  health.rs  heavens_gate.rs  identity.rs  inference_monitor.rs  injection.rs  injection_macos_enhanced.rs  input_capture.rs  lateral_movement.rs  llm_interceptor.rs  lsass.rs  memory.rs  mod.rs  model_format.rs  (+29 more)
src/config/: container.rs  credentials.rs  exclusions.rs  health_check.rs  manager.rs  mod.rs  rollback.rs  signing.rs  validator.rs
src/deception/: honeytokens.rs  mod.rs  services.rs  templates.rs
src/detection/: constants.rs  mod.rs
src/driver/: mod.rs  ring_buffer.rs  scan_port.rs
src/health/: metrics_collector.rs  mod.rs
src/installer/: driver.rs  mod.rs  scheduled_task.rs  service_recovery.rs  token.rs  wmi_persistence.rs
src/integrations/: amsi_provider.rs  clamav.rs  defender.rs  mod.rs  wsc.rs  xprotect.rs
src/ipc/: acl.rs  auth.rs  client.rs  event_store.rs  mod.rs  protocol.rs  server.rs  tests.rs
src/live_response/: mod.rs  process_manager.rs  process_manager_test.rs
src/logging/: buffer.rs  forwarder.rs  mod.rs  parser.rs  tests.rs
src/memory/: EXAMPLES.md  README.md  dump.rs  evasion_detector.rs  indirect_syscall_detector.rs  mod.rs  pe_parser.rs  scanner.rs  stack_spoofing_detector.rs  string_extractor.rs  suspicious_detector.rs  tests.rs  vad_parser.rs
src/metrics/: mod.rs  server.rs
src/ml/: README.md  SUMMARY.md  layer_cache.rs  mod.rs  model_chunker.rs  streaming_loader.rs  tests.rs
src/offline/: local_rules.rs  mod.rs  sync_queue.rs
src/performance/: README.md  allocator.rs  config.rs  cpu_affinity.rs  example_collector.rs  integration_test.rs  lockfree_queue.rs  memory_pool.rs  metrics.rs  mod.rs  simd_hash.rs
src/pki/: certificate_manager.rs  csr.rs  mod.rs
src/plugins/: api.rs  loader.rs  mod.rs  monitor.rs  runtime.rs  sandbox.rs
src/process_manager/: critical_processes.rs  explorer.rs  mod.rs  safe_kill.rs  suspend_resume.rs  trust_manager.rs
src/profiling/: cpu.rs  locks.rs  memory.rs  metrics.rs  mod.rs  pyroscope.rs
src/protection/: anti_debug.rs  anti_dump.rs  anti_sandbox.rs  cet_shadow_stack.rs  driver_integration.rs  file_guard.rs  handle_protection.rs  hvci.rs  kdp.rs  mod.rs  process_guard.rs  process_mitigations.rs  registry_guard.rs  service_guard.rs  xfg.rs
src/quarantine/: encryption.rs  metadata.rs  mod.rs  restore.rs  retention.rs  stats.rs  tests.rs  vault.rs
src/resource_manager/: README.md  budget.rs  integration_example.rs  mod.rs  monitor.rs  (+1 more)
tests/: README.md  ai_discovery_integration_test.rs  app_control_linux_test.rs  config_rollback_tests.rs  ebpf.rs  macos_endpoint_health_tests.rs  macos_isolation_test.sh  ml_agent_parity_fixture_contract.rs  model_scanner_test.rs  profile_validation.rs  resource_manager_test.rs  tcc_xpc_tests.rs  tracing_test.rs
xtask/: Cargo.toml
(+140 files in other folders)
